--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Sublime Text 非官方文档 &mdash; Sublime Text 非官方文档</title>
+    <title>Sublime Text 非官方文档 &mdash; Sublime Text 非官方文档 meetrice</title>
 <!-- RTD <head> -->
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
 <script type="text/javascript" src="//media.readthedocs.org/javascript/underscore.js"></script>
